ext/mvc/view/engine/volt/scanner.c
/* Generated by re2c 0.13.5 on Wed Jul  8 11:53:38 2015 */
/* #line 1 "scanner.re" */

/*
  +------------------------------------------------------------------------+
  | Phalcon Framework                                                      |
  +------------------------------------------------------------------------+
  | Copyright (c) 2011-2014 Phalcon Team (http://www.phalconphp.com)       |
  +------------------------------------------------------------------------+
  | This source file is subject to the New BSD License that is bundled     |
  | with this package in the file docs/LICENSE.txt.                        |
  |                                                                        |
  | If you did not receive a copy of the license and are unable to         |
  | obtain it through the world-wide-web, please send an email             |
  | to license@phalconphp.com so we can send you a copy immediately.       |
  +------------------------------------------------------------------------+
  | Authors: Andres Gutierrez <andres@phalconphp.com>                      |
  |          Eduar Carvajal <eduar@phalconphp.com>                         |
  +------------------------------------------------------------------------+
*/

#include "php_phalcon.h"
#include "mvc/view/engine/volt/scanner.h"

#define YYCTYPE unsigned char
#define YYCURSOR (s->start)
#define YYLIMIT (s->end)
#define YYMARKER q

void phvolt_rtrim(phvolt_scanner_token *token) {

	char *cursor, *removed_str;
	int i;
	char ch;

	if (token->len > 0) {

		cursor = token->value;
		cursor += (token->len - 1);
		for (i = token->len; i > 0; i--) {
			ch = (*cursor);
			if (ch == '\t' || ch == '\n' || ch == '\r' || ch == ' ' || ch == '\v') {
				cursor--;
				continue;
			}
			break;
		}

        if (i >= 0) {
    		removed_str = emalloc(i + 1);
    		memcpy(removed_str, token->value, i);
    		removed_str[i] = '\0';

    		efree(token->value);
    		token->value = removed_str;
    		token->len = i;
        }
	}

}

void phvolt_ltrim(phvolt_scanner_token *token) {

	char *cursor, *removed_str;
	int i;

	if (token->len > 0) {

		cursor = token->value;
		for (i = 0; i < token->len; i++) {
			char ch = (*cursor);
			if (ch == '\t' || ch == '\n' || ch == '\r' || ch == ' ' || ch == '\v') {
				cursor++;
				continue;
			}
			break;
		}

        if (i >= 0) {
    		removed_str = emalloc(token->len - i + 1);
    		memcpy(removed_str, token->value + i, token->len - i);
    		removed_str[token->len - i] = '\0';

    		efree(token->value);
    		token->value = removed_str;
    		token->len = token->len - i;
        }
	}

}

int phvolt_get_token(phvolt_scanner_state *s, phvolt_scanner_token *token) {

	unsigned char next, double_next;
	char *q = YYCURSOR, *start = YYCURSOR;
	int status = PHVOLT_SCANNER_RETCODE_IMPOSSIBLE;

	while (PHVOLT_SCANNER_RETCODE_IMPOSSIBLE == status) {

		if (s->mode == PHVOLT_MODE_RAW || s->mode == PHVOLT_MODE_COMMENT) {

			next = '\0';
			double_next = '\0';

			if (*YYCURSOR == '\n') {
				s->active_line++;
			}

			if (*YYCURSOR != '\0') {
				next = *(YYCURSOR + 1);
				if (next != '\0') {
					double_next = *(YYCURSOR + 2);
				}
			}

			if (*YYCURSOR == '\0' || (*YYCURSOR == '{' && (next == '%' || next == '{' || next == '#'))) {

				if (next != '#') {

					s->mode = PHVOLT_MODE_CODE;

					if (s->raw_buffer_cursor > 0) {

						token->opcode = PHVOLT_T_RAW_FRAGMENT;
						token->value = emalloc(sizeof(char) * s->raw_buffer_cursor + 1);
						memcpy(token->value, s->raw_buffer, s->raw_buffer_cursor);
						token->value[s->raw_buffer_cursor] = 0;
						token->len = s->raw_buffer_cursor;

						if (s->whitespace_control == 1) {
							phvolt_ltrim(token);
							s->whitespace_control = 0;
						}

						if (double_next == '-') {
							phvolt_rtrim(token);
						}

						s->raw_buffer_cursor = 0;
						q = YYCURSOR;
					} else {
						token->opcode = PHVOLT_T_IGNORE;
					}

				} else {

					while ((next = *(++YYCURSOR))) {
						if (next == '#' && *(YYCURSOR + 1) == '}') {
							YYCURSOR+=2;
							token->opcode = PHVOLT_T_IGNORE;
							return 0;
						} else {
							if (next == '\n') {
								s->active_line++;
							}
						}
					}

					return PHVOLT_SCANNER_RETCODE_EOF;
				}

				return 0;

			} else {

				if (s->raw_buffer_cursor == s->raw_buffer_size) {
					s->raw_buffer_size += PHVOLT_RAW_BUFFER_SIZE;
					s->raw_buffer = erealloc(s->raw_buffer, s->raw_buffer_size);
				}

				memcpy(s->raw_buffer+s->raw_buffer_cursor, YYCURSOR, 1);
				s->raw_buffer_cursor++;

				++YYCURSOR;
			}

		} else {

		
/* #line 181 "scanner.c" */
		{
			YYCTYPE yych;
			unsigned int yyaccept = 0;
			static const unsigned char yybm[] = {
				  0,  96,  96,  96,  96,  96,  96,  96, 
				 96, 104,  96,  96,  96, 104,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				104,  96,  32,  96,  96,  96,  96,  64, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				240, 240, 240, 240, 240, 240, 240, 240, 
				240, 240,  96,  96,  96,  96,  96,  96, 
				 96, 112, 112, 112, 112, 112, 112, 112, 
				112, 112, 112, 112, 112, 112, 112, 112, 
				112, 112, 112, 112, 112, 112, 112, 112, 
				112, 112, 112,  96,  16,  96,  96, 112, 
				 96, 112, 112, 112, 112, 112, 112, 112, 
				112, 112, 112, 112, 112, 112, 112, 112, 
				112, 112, 112, 112, 112, 112, 112, 112, 
				112, 112, 112,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
				 96,  96,  96,  96,  96,  96,  96,  96, 
			};

			yych = *YYCURSOR;
			switch (yych) {
			case 0x00:	goto yy70;
			case '\t':
			case '\r':
			case ' ':	goto yy66;
			case '\n':	goto yy68;
			case '!':	goto yy58;
			case '"':	goto yy27;
			case '%':	goto yy21;
			case '\'':	goto yy29;
			case '(':	goto yy44;
			case ')':	goto yy46;
			case '*':	goto yy34;
			case '+':	goto yy32;
			case ',':	goto yy42;
			case '-':	goto yy23;
			case '.':	goto yy40;
			case '/':	goto yy36;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy2;
			case ':':	goto yy62;
			case '<':	goto yy52;
			case '=':	goto yy54;
			case '>':	goto yy56;
			case '?':	goto yy64;
			case 'A':
			case 'a':	goto yy11;
			case 'B':
			case 'b':	goto yy13;
			case 'C':
			case 'c':	goto yy15;
			case 'D':
			case 'd':	goto yy18;
			case 'E':
			case 'e':	goto yy6;
			case 'F':
			case 'f':	goto yy7;
			case 'G':
			case 'H':
			case 'J':
			case 'K':
			case 'L':
			case 'P':
			case 'Q':
			case 'U':
			case 'V':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'g':
			case 'h':
			case 'j':
			case 'k':
			case 'l':
			case 'p':
			case 'q':
			case 'u':
			case 'v':
			case 'x':
			case 'y':
			case 'z':	goto yy31;
			case 'I':
			case 'i':	goto yy4;
			case 'M':
			case 'm':	goto yy14;
			case 'N':
			case 'n':	goto yy9;
			case 'O':
			case 'o':	goto yy12;
			case 'R':
			case 'r':	goto yy17;
			case 'S':
			case 's':	goto yy8;
			case 'T':
			case 't':	goto yy10;
			case 'W':
			case 'w':	goto yy16;
			case '[':	goto yy48;
			case '\\':	goto yy30;
			case ']':	goto yy50;
			case '{':	goto yy19;
			case '|':	goto yy60;
			case '}':	goto yy25;
			case '~':	goto yy38;
			default:	goto yy72;
			}
yy2:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			goto yy329;
yy3:
/* #line 182 "scanner.re" */
			{
			token->opcode = PHVOLT_T_INTEGER;
			token->value = estrndup(start, YYCURSOR - start);
			token->len = YYCURSOR - start;
			q = YYCURSOR;
			return 0;
		}
/* #line 329 "scanner.c" */
yy4:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= 'T') {
				if (yych <= 'M') {
					if (yych == 'F') goto yy302;
					goto yy100;
				} else {
					if (yych <= 'N') goto yy304;
					if (yych <= 'R') goto yy100;
					if (yych <= 'S') goto yy306;
					goto yy308;
				}
			} else {
				if (yych <= 'n') {
					if (yych == 'f') goto yy302;
					if (yych <= 'm') goto yy100;
					goto yy304;
				} else {
					if (yych <= 'r') goto yy100;
					if (yych <= 's') goto yy306;
					if (yych <= 't') goto yy308;
					goto yy100;
				}
			}
yy5:
/* #line 489 "scanner.re" */
			{
			token->opcode = PHVOLT_T_IDENTIFIER;
			token->value = estrndup(start, YYCURSOR - start);
			token->len = YYCURSOR - start;
			q = YYCURSOR;
			return 0;
		}
/* #line 363 "scanner.c" */
yy6:
			yych = *++YYCURSOR;
			if (yych <= 'X') {
				if (yych <= 'N') {
					if (yych <= 'K') goto yy100;
					if (yych <= 'L') goto yy234;
					if (yych <= 'M') goto yy235;
					goto yy236;
				} else {
					if (yych == 'V') goto yy237;
					if (yych <= 'W') goto yy100;
					goto yy238;
				}
			} else {
				if (yych <= 'n') {
					if (yych <= 'k') goto yy100;
					if (yych <= 'l') goto yy234;
					if (yych <= 'm') goto yy235;
					goto yy236;
				} else {
					if (yych <= 'v') {
						if (yych <= 'u') goto yy100;
						goto yy237;
					} else {
						if (yych == 'x') goto yy238;
						goto yy100;
					}
				}
			}
yy7:
			yych = *++YYCURSOR;
			if (yych <= 'O') {
				if (yych == 'A') goto yy226;
				if (yych <= 'N') goto yy100;
				goto yy227;
			} else {
				if (yych <= 'a') {
					if (yych <= '`') goto yy100;
					goto yy226;
				} else {
					if (yych == 'o') goto yy227;
					goto yy100;
				}
			}
yy8:
			yych = *++YYCURSOR;
			if (yych <= 'E') {
				if (yych == 'C') goto yy217;
				if (yych <= 'D') goto yy100;
				goto yy218;
			} else {
				if (yych <= 'c') {
					if (yych <= 'b') goto yy100;
					goto yy217;
				} else {
					if (yych == 'e') goto yy218;
					goto yy100;
				}
			}
yy9:
			yych = *++YYCURSOR;
			if (yych <= 'U') {
				if (yych == 'O') goto yy204;
				if (yych <= 'T') goto yy100;
				goto yy205;
			} else {
				if (yych <= 'o') {
					if (yych <= 'n') goto yy100;
					goto yy204;
				} else {
					if (yych == 'u') goto yy205;
					goto yy100;
				}
			}
yy10:
			yych = *++YYCURSOR;
			if (yych == 'R') goto yy200;
			if (yych == 'r') goto yy200;
			goto yy100;
yy11:
			yych = *++YYCURSOR;
			if (yych <= 'U') {
				if (yych == 'N') goto yy187;
				if (yych <= 'T') goto yy100;
				goto yy188;
			} else {
				if (yych <= 'n') {
					if (yych <= 'm') goto yy100;
					goto yy187;
				} else {
					if (yych == 'u') goto yy188;
					goto yy100;
				}
			}
yy12:
			yych = *++YYCURSOR;
			if (yych <= 'R') {
				if (yych == 'D') goto yy182;
				if (yych <= 'Q') goto yy100;
				goto yy183;
			} else {
				if (yych <= 'd') {
					if (yych <= 'c') goto yy100;
					goto yy182;
				} else {
					if (yych == 'r') goto yy183;
					goto yy100;
				}
			}
yy13:
			yych = *++YYCURSOR;
			if (yych <= 'R') {
				if (yych == 'L') goto yy172;
				if (yych <= 'Q') goto yy100;
				goto yy173;
			} else {
				if (yych <= 'l') {
					if (yych <= 'k') goto yy100;
					goto yy172;
				} else {
					if (yych == 'r') goto yy173;
					goto yy100;
				}
			}
yy14:
			yych = *++YYCURSOR;
			if (yych == 'A') goto yy167;
			if (yych == 'a') goto yy167;
			goto yy100;
yy15:
			yych = *++YYCURSOR;
			if (yych <= 'O') {
				if (yych == 'A') goto yy151;
				if (yych <= 'N') goto yy100;
				goto yy152;
			} else {
				if (yych <= 'a') {
					if (yych <= '`') goto yy100;
					goto yy151;
				} else {
					if (yych == 'o') goto yy152;
					goto yy100;
				}
			}
yy16:
			yych = *++YYCURSOR;
			if (yych == 'I') goto yy147;
			if (yych == 'i') goto yy147;
			goto yy100;
yy17:
			yych = *++YYCURSOR;
			if (yych == 'E') goto yy141;
			if (yych == 'e') goto yy141;
			goto yy100;
yy18:
			yych = *++YYCURSOR;
			if (yych <= 'O') {
				if (yych == 'E') goto yy132;
				if (yych <= 'N') goto yy100;
				goto yy133;
			} else {
				if (yych <= 'e') {
					if (yych <= 'd') goto yy100;
					goto yy132;
				} else {
					if (yych == 'o') goto yy133;
					goto yy100;
				}
			}
yy19:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '%') goto yy126;
			if (yych == '{') goto yy124;
/* #line 572 "scanner.re" */
			{
			token->opcode = PHVOLT_T_CBRACKET_OPEN;
			return 0;
		}
/* #line 542 "scanner.c" */
yy21:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '}') goto yy122;
/* #line 517 "scanner.re" */
			{
			token->opcode = PHVOLT_T_MOD;
			return 0;
		}
/* #line 551 "scanner.c" */
yy23:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '-') {
				if (yych == '%') goto yy117;
				if (yych >= '-') goto yy114;
			} else {
				if (yych <= '=') {
					if (yych >= '=') goto yy112;
				} else {
					if (yych == '}') goto yy116;
				}
			}
yy24:
/* #line 502 "scanner.re" */
			{
			token->opcode = PHVOLT_T_SUB;
			return 0;
		}
/* #line 571 "scanner.c" */
yy25:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '}') goto yy110;
/* #line 577 "scanner.re" */
			{
			token->opcode = PHVOLT_T_CBRACKET_CLOSE;
			return 0;
		}
/* #line 580 "scanner.c" */
yy27:
			yyaccept = 2;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych >= 0x01) goto yy108;
yy28:
/* #line 688 "scanner.re" */
			{
			status = PHVOLT_SCANNER_RETCODE_ERR;
			break;
		}
/* #line 591 "scanner.c" */
yy29:
			yyaccept = 2;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 0x00) goto yy28;
			goto yy102;
yy30:
			yych = *++YYCURSOR;
			if (yych <= '^') {
				if (yych <= '@') goto yy28;
				if (yych <= 'Z') goto yy99;
				goto yy28;
			} else {
				if (yych == '`') goto yy28;
				if (yych <= 'z') goto yy99;
				goto yy28;
			}
yy31:
			yych = *++YYCURSOR;
			goto yy100;
yy32:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '+') goto yy97;
			if (yych == '=') goto yy95;
/* #line 497 "scanner.re" */
			{
			token->opcode = PHVOLT_T_ADD;
			return 0;
		}
/* #line 620 "scanner.c" */
yy34:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '=') goto yy93;
/* #line 507 "scanner.re" */
			{
			token->opcode = PHVOLT_T_MUL;
			return 0;
		}
/* #line 629 "scanner.c" */
yy36:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '=') goto yy91;
/* #line 512 "scanner.re" */
			{
			token->opcode = PHVOLT_T_DIV;
			return 0;
		}
/* #line 638 "scanner.c" */
yy38:
			++YYCURSOR;
/* #line 532 "scanner.re" */
			{
			token->opcode = PHVOLT_T_CONCAT;
			return 0;
		}
/* #line 646 "scanner.c" */
yy40:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '.') goto yy89;
/* #line 542 "scanner.re" */
			{
			token->opcode = PHVOLT_T_DOT;
			return 0;
		}
/* #line 655 "scanner.c" */
yy42:
			++YYCURSOR;
/* #line 547 "scanner.re" */
			{
			token->opcode = PHVOLT_T_COMMA;
			return 0;
		}
/* #line 663 "scanner.c" */
yy44:
			++YYCURSOR;
/* #line 552 "scanner.re" */
			{
			token->opcode = PHVOLT_T_PARENTHESES_OPEN;
			return 0;
		}
/* #line 671 "scanner.c" */
yy46:
			++YYCURSOR;
/* #line 557 "scanner.re" */
			{
			token->opcode = PHVOLT_T_PARENTHESES_CLOSE;
			return 0;
		}
/* #line 679 "scanner.c" */
yy48:
			++YYCURSOR;
/* #line 562 "scanner.re" */
			{
			token->opcode = PHVOLT_T_SBRACKET_OPEN;
			return 0;
		}
/* #line 687 "scanner.c" */
yy50:
			++YYCURSOR;
/* #line 567 "scanner.re" */
			{
			token->opcode = PHVOLT_T_SBRACKET_CLOSE;
			return 0;
		}
/* #line 695 "scanner.c" */
yy52:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '<') goto yy53;
			if (yych <= '=') goto yy87;
			if (yych <= '>') goto yy85;
yy53:
/* #line 647 "scanner.re" */
			{
			token->opcode = PHVOLT_T_LESS;
			return 0;
		}
/* #line 707 "scanner.c" */
yy54:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '=') goto yy81;
/* #line 587 "scanner.re" */
			{
			token->opcode = PHVOLT_T_ASSIGN;
			return 0;
		}
/* #line 716 "scanner.c" */
yy56:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '=') goto yy79;
/* #line 652 "scanner.re" */
			{
			token->opcode = PHVOLT_T_GREATER;
			return 0;
		}
/* #line 725 "scanner.c" */
yy58:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '=') goto yy75;
/* #line 642 "scanner.re" */
			{
			token->opcode = PHVOLT_T_NOT;
			return 0;
		}
/* #line 734 "scanner.c" */
yy60:
			++YYCURSOR;
/* #line 657 "scanner.re" */
			{
			token->opcode = PHVOLT_T_PIPE;
			return 0;
		}
/* #line 742 "scanner.c" */
yy62:
			++YYCURSOR;
/* #line 662 "scanner.re" */
			{
			token->opcode = PHVOLT_T_COLON;
			return 0;
		}
/* #line 750 "scanner.c" */
yy64:
			++YYCURSOR;
/* #line 667 "scanner.re" */
			{
			token->opcode = PHVOLT_T_QUESTION;
			return 0;
		}
/* #line 758 "scanner.c" */
yy66:
			++YYCURSOR;
			yych = *YYCURSOR;
			goto yy74;
yy67:
/* #line 672 "scanner.re" */
			{
			token->opcode = PHVOLT_T_IGNORE;
			return 0;
		}
/* #line 769 "scanner.c" */
yy68:
			++YYCURSOR;
/* #line 677 "scanner.re" */
			{
			s->active_line++;
